tests/paczka1/small_fuzzy/50907829.err
Error in line 2: A551 S917 98,9
Error in line 1: oyl2D6Fk S460 20,8
Error in line 9: s7MXkB S375 9,6
Error in line 13: hJg58 S917 96,1
Error in line 6: A551 A551 26,5
